# gpgap

./: .gitignore  .gitmodules  GPGap-ubuntu.spec  GPGap-win.spec  LICENSE.md  README.md  gpgap.py  key.py  media.py  pyproject.toml
.github/workflows/: build.yml
pages/: __init__.py  git_commits.py  login.py  new_key.py  sign.py  sign_file.py
